# IE0301-Proyecto-Final

./: CMakeLists.txt  LICENSE  Makefile  README.md  monitore.sh  plot_stats.py  pruebas.sh  report.txt  test_udp_network.sh  test_videos.sh
include/config/: app_config.hpp  object_state.hpp  track_info.hpp
include/pipeline/: pipeline.hpp
include/report/: report.hpp
include/roi/: roi.hpp
reportes/: UncarroRapidisimo_report.txt  Uncarro_report.txt  Video1CarroRapidisimo_report.txt  Video4Carros_report.txt  videoCarros_report.txt
reportes_pruebas/: roi_centro.txt  roi_inferior_der.txt  roi_superior_izq.txt
src/: main.cpp  roi.cpp  video_utils.cpp  video_utils.h
src/config/: app_config.cpp  app_config.cpp.save  app_config.h  app_config.hpp  track_info.cpp  track_info.h  track_info.hpp
src/pipeline/: bus_handler.cpp  pipeline.cpp  pipeline.h  pipeline.hpp
src/report/: report.cpp  report.h  report.hpp
src/roi/: .render.h.swp  render.cpp  render.h  roi.cpp
